<resources>
    <string name="app_name">Player</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="intro_label">Introduction</string>
    <string name="welcome_to_play_beats">"Welcome to Play Beats, a beautiful and lightweight music player for Android. "</string>
    <string name="label_playing_queue">Playing queue</string>
    <string name="open_playing_queue_instruction">Swipe the card in the now playing screen up to reveal the full playing queue.</string>
    <string name="rearrange_playing_queue_instruction">Rearrange the playing queue by dragging a song from its track number.</string>
    <string name="library">Library</string>
    <string name="file">Files</string>
    <string name="my_favorite">Favorite</string>
    <string name="action_about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="songs_tab">Songs</string>
    <string name="artist_tab">Artists</string>
    <string name="albums_tab">Albums</string>
    <string name="genres_tab">Genres</string>
    <string name="playlists_tab">Playlists</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_album">Shuffle album</string>
    <string name="action_shuffle_artist">Shuffle artist</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_show_lyrics">Show lyrics</string>
    <string name="action_search">Search</string>
    <string name="action_grid_size">Grid size</string>
    <string name="grid_size_1">1</string>
    <string name="grid_size_2">2</string>
    <string name="grid_size_3">3</string>
    <string name="grid_size_4">4</string>
    <string name="grid_size_5">5</string>
    <string name="grid_size_6">6</string>
    <string name="grid_size_7">7</string>
    <string name="grid_size_8">8</string>
    <string name="colored_footers">Colored footers</string>
    <string name="search_hint">Search your library…</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="transition_album_art">album_art_transition</string>
    <string name="transition_artist_image">artist_image_transition</string>
    <string name="transition_fab">fab_transition</string>
    <string name="transition_mini_player">mini_player_transition</string>
    <string name="permissions_denied">Permissions denied.</string>
    <string name="permission_external_storage_denied">Permission to access external storage denied.</string>
    <string name="action_grant">Grant</string>
    <string name="no_results">No results</string>
    <string name="album">Album</string>
    <string name="song">Song</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="x_has_been_set_as_ringtone">Set %1$s as your ringtone.</string>
    <string name="deleted_x_songs">Deleted %1$d songs.</string>
    <string name="favorites">Favorites</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
    <string name="inserted_x_songs_into_playlist_x">Inserted %1$d songs into the playlist %2$s.</string>
    <string name="unplayable_file">Couldn\u2019t play this song.</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="up_next">Up next</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play">Play</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_clear_playlist">Clear playlist</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_add_to_playlist">Add to playlist…</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="save_playlist_title">Save as file</string>
    <string name="action_scan">Scan</string>
    <string name="action_share">Share</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set">Set</string>
    <string name="updated_artist_image">Artist image updated.</string>
    <string name="sleep_timer_set">Sleep timer set for %d minutes from now.</string>
    <string name="sleep_timer_canceled">Sleep timer canceled.</string>
    <string name="cancel_current_timer">Cancel current timer</string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="what_do_you_want_to_share">What do you want to share?</string>
    <string name="the_audio_file">The audio file</string>
    <string name="action_new_playlist">New playlist…</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="new_playlist_title">New playlist</string>
    <string name="label_details">Details</string>
    <string name="label_file_name">File name</string>
    <string name="label_file_path">File path</string>
    <string name="label_file_size">Size</string>
    <string name="label_file_format">Format</string>
    <string name="label_track_length">Length</string>
    <string name="label_bit_rate">Bitrate</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_x_songs"><![CDATA[Delete <b>%1$d</b> songs?]]></string>
    <string name="remove_song_x_from_playlist"><![CDATA[Remove the song <b>%1$s</b> from the playlist?]]></string>
    <string name="remove_x_songs_from_playlist"><![CDATA[Remove <b>%1$d</b> songs from the playlist?]]></string>
    <string name="delete_song_x"><![CDATA[Delete the song <b>%1$s</b>?]]></string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="card">Card</string>
    <string name="flat">Flat</string>
    <string name="changelog">Changelog</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="clear_playlist_x"><![CDATA[Clear the playlist <b>%1$s</b>? This can\u2019t be undone!]]></string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_x_playlists"><![CDATA[Delete <b>%1$d</b> playlists?]]></string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist <b>%1$s</b>?]]></string>
    <string name="last_added">Last added</string>
    <string name="saving_to_file">Saving to file…</string>
    <string name="rename_playlist_title">Rename playlist</string>
    <string name="saved_playlist_to">Saved playlist to %s.</string>
    <string name="failed_to_save_playlist">Failed to save playlist (%s).</string>
    <string name="history">History</string>
    <string name="my_top_tracks">My top tracks</string>
    <string name="not_listed_in_media_store"><![CDATA[<b>%s</b> is not listed in the media store.]]></string>
    <string name="new_start_directory">%s is the new start directory.</string>
    <string name="nothing_to_scan">Nothing to scan.</string>
    <string name="scanned_files">Scanned %1$d of %2$d files.</string>
    <string name="could_not_scan_files">Could not scan %d files.</string>
    <string name="listing_files">Listing files</string>
    <string name="app_shortcut_shuffle_all_long">@string/action_shuffle_all</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_long">@string/my_top_tracks</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_shortcut_last_added_long">@string/last_added</string>
    <string name="app_shortcut_last_added_short">@string/last_added</string>
    <string name="playlist_is_empty">Playlist is empty</string>
    <string name="pref_title_now_playing_screen_appearance">Appearance</string>
    <string name="pref_header_colors">Colors</string>
    <string name="pref_header_now_playing_screen">Now playing</string>
    <string name="pref_title_general_theme">General theme</string>
    <string name="pref_header_audio">Audio</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_images">Images</string>
    <string name="pref_header_lockscreen">Lockscreen</string>
    <string name="pref_header_playlists">Playlists</string>
    <string name="pref_header_notification">Notification</string>
    <string name="pref_title_navigation_bar">Colored navigation bar</string>
    <string name="pref_title_app_shortcuts">Colored app shortcuts</string>
    <string name="pref_title_set_default_start_page">Start page</string>
    <string name="pref_title_album_art_on_lockscreen">Show album cover</string>
    <string name="pref_title_auto_download_metadata">Auto download metadata</string>
    <string name="pref_title_blurred_album_art">Blur album cover</string>
    <string name="pref_title_colored_notification">Colored notification</string>
    <string name="pref_title_classic_notification">Classic notification design</string>
    <string name="pref_title_ignore_media_store_artwork">Ignore Media Store covers</string>
    <string name="pref_title_gapless_playback">Gapless playback</string>
    <string name="pref_title_force_square_album_art">Square album cover</string>
    <string name="pref_title_opaque_toolbar_now_playing">Opaque toolbar</string>
    <string name="pref_title_opaque_statusbar_now_playing">Opaque statusbar</string>
    <string name="pref_title_larger_title_box_now_playing">Larger title box</string>
    <string name="pref_title_alternative_progress_slider_now_playing">Alternative progress slider</string>
    <string name="pref_title_playback_controller_card_now_playing">Show card below playback controls</string>
    <string name="pref_title_colored_playback_controls_now_playing">Colored playback controls</string>
    <string name="pref_title_audio_ducking">Reduce volume on focus loss</string>
    <string name="pref_title_last_added_interval">Last added playlist interval</string>
    <string name="pref_title_synchronized_lyrics_show">Show synchronized lyrics</string>
    <string name="last_opened">Last opened</string>
    <string name="light_theme_name">Light</string>
    <string name="dark_theme_name">Dark</string>
    <string name="black_theme_name">Black (AMOLED)</string>
    <string name="always">Always</string>
    <string name="only_on_wifi">Only on Wi-Fi</string>
    <string name="never">Never</string>
</resources>